--- a/Backendtest5/testing/src/main/resources/application.properties
+++ b/Backendtest5/testing/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 # === Database Configuration ===
 spring.datasource.url=jdbc:mysql://inventorydb.1234.us-east-1.rds.amazonaws.com:3306/inventorytest5
 spring.datasource.username=admin
-spring.datasource.password=Ajit@2008
+spring.datasource.password=Ajit2003
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
